# back/internal/pricing/interfaces/material_price_handler.go
@@ -86,7 +86,7 @@ func (h *MaterialPriceHandler) GetPrice(c *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        id path int true "材料ID"
-// @Success      200 {array} domain.SupplierPrice "价格历史记录"
+// @Success      200 {array} application.PriceData "价格历史记录"
 // @Failure      500 {object} map[string]string "服务器错误"
 // @Security     Bearer
 // @Router       /material/:id/price/history [get]
